GNOME Bugzilla – Bug 690078
Fail gracefully if the session bus name cannot be aquired
Last modified: 2012-12-12 12:21:03 UTC
Created attachment 231315 [details] [review] 0001-main-exit-gracefully-if-the-session-name-is-already-.patch GNOME_SETTINGS_DAEMON_3_7_1-90-g916bfd5 if the bus name cannot be acquired, manager may be NULL, causing a segfault instead of a shutdown.
Comment on attachment 231315 [details] [review] 0001-main-exit-gracefully-if-the-session-name-is-already-.patch Pushed to master, thanks.