main: exit gracefully if the session name is already taken

https://bugzilla.gnome.org/show_bug.cgi?id=690078